syntax = "proto3";

package konvoy.mesh.v1alpha1;

option go_package = "v1alpha1";

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "validate/validate.proto";

option (gogoproto.equal_all) = true;

// DataplaneStatus defines the observed state of a Dataplane.
message DataplaneStatus {

  // List of ADS subscriptions created by a given Dataplane.
  repeated DiscoverySubscription subscriptions = 1;
}

// DiscoverySubscription describes a single ADS subscription
// created by a Dataplane to the Control Plane.
// Ideally, there should be only one such subscription per Dataplane lifecycle.
// Presence of multiple subscriptions might indicate one of the following
// events:
// - transient loss of network connection between Dataplane and Control Plane
// - Dataplane restart (i.e. hot restart or crash)
// - Control Plane restart (i.e. rolling update or crash)
// - etc
message DiscoverySubscription {

  // Unique id per ADS subscription.
  string id = 1 [ (validate.rules).string.min_len = 1 ];

  // Control Plane instance that handled given subscription.
  string control_plane_instance_id = 2 [ (validate.rules).string.min_len = 1 ];

  // Time when a given Dataplane connected to the Control Plane.
  google.protobuf.Timestamp connect_time = 3
      [ (validate.rules).timestamp.required = true ];

  // Time when a given Dataplane disconnected from the Control Plane.
  google.protobuf.Timestamp disconnect_time = 4;

  // Status of the ADS subscription.
  DiscoverySubscriptionStatus status = 5 [ (gogoproto.nullable) = false ];
}

// DiscoverySubscriptionStatus defines status of an ADS subscription.
message DiscoverySubscriptionStatus {

  // Time when status of a given ADS subscription was most recently updated.
  google.protobuf.Timestamp last_update_time = 1;

  // Total defines an aggregate over individual xDS stats.
  DiscoveryServiceStats total = 2 [ (gogoproto.nullable) = false ];

  // CDS defines all CDS stats.
  DiscoveryServiceStats cds = 3 [ (gogoproto.nullable) = false ];

  // EDS defines all EDS stats.
  DiscoveryServiceStats eds = 4 [ (gogoproto.nullable) = false ];

  // LDS defines all LDS stats.
  DiscoveryServiceStats lds = 5 [ (gogoproto.nullable) = false ];

  // RDS defines all RDS stats.
  DiscoveryServiceStats rds = 6 [ (gogoproto.nullable) = false ];
}

// DiscoveryServiceStats defines all stats over a single xDS service.
message DiscoveryServiceStats {

  // Number of xDS responses sent to the Dataplane.
  uint64 responses_sent = 1;

  // Number of xDS responses ACKed by the Dataplane.
  uint64 responses_acknowledged = 2;

  // Number of xDS responses NACKed by the Dataplane.
  uint64 responses_rejected = 3;
}
